@@ -15,22 +15,23 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class WorkflowUtil {
 
-    @Autowired
     private ServiceRequestRepository repository;
 
-    @Autowired
     private ObjectMapper mapper;
 
-    @Autowired
     private Configuration configs;
 
-
+    @Autowired
+    public WorkflowUtil(ServiceRequestRepository repository, Configuration configs, ObjectMapper mapper) {
+        this.repository = repository;
+        this.configs = configs;
+        this.mapper = mapper;
+    }
 
     /**
     * Searches the BussinessService corresponding to the businessServiceCode
@@ -145,7 +146,7 @@ public class WorkflowUtil {
             List<String> userIds = null;
 
             if(!CollectionUtils.isEmpty(processInstance.getAssignes())){
-                userIds = processInstance.getAssignes().stream().map(User::getUuid).collect(Collectors.toList());
+                userIds = processInstance.getAssignes().stream().map(User::getUuid).toList();
             }
 
             Workflow workflow = Workflow.builder()
